--- a/apps/web/src/style.css
+++ b/apps/web/src/style.css
@@ -102,3 +102,15 @@ body {
   max-width: 1280px;
   margin: 0 auto;
 }
+
+/* Hide spin buttons for number inputs */
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
